add public comments API
